# runix

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.test  LICENSE  README.md  bootstrap.sh  shell.nix  test.gup  test.sh
.github/workflows/: ci.yml
builder/: Cargo.toml
builder/src/: github.rs  lib.rs  main.rs
builder/tests/: integration.rs
cli/: Cargo.toml
cli/src/: cache.rs  main.rs  nix_evaluate.rs  paths.rs  platform.rs  rewrite.rs  runner.rs  serde_util.rs  store.rs
cli/tests/: integration.rs  samples.rs
inject/: Cargo.toml
inject/src/: lib.rs
nix/: all-platforms.nix  default.nix  lock.gup  lock.nix  lock.nix.gup  pkgs.nix  pkgs2.nix  runix.nix  shell.nix  sources.json  zstd.nix
nix/lock/: Darwin-aarch64.nix  Darwin-x86_64.nix  Linux-x86_64.nix  arm64-Darwin.nix  current.nix  x86_64-Darwin.nix  x86_64-Linux.nix
sample/: .gitignore  Gupfile  README.md  candidates.gup  compute-store-path.sh  convert-macos.sh  dead-paths.gup  make-wrapper.sh  platform.gup
sample/macos/: all.gup
sample/nix/: nixpkgs-stable.nix
