[package]
name = "runix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = [ "blocking" ] }
walkdir = "2"
itertools = "0.10"
memmap2 = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix-nar = "0.2"
